<resources>
    <string name="app_name">Sueldazo</string>
    <string name="facebook_application_id" translatable="false">508540496613548</string>
    <string name="terms_cond">TERMINOS Y CONDICIONES BENEFICIOS APP

Aceptación de los términos y condiciones

Le damos la bienvenida a Beneficios. Beneficios proveerá a Ud. sus servicios de acuerdo a los siguientes Términos y Condiciones, los cuales podrán ser periódicamente actualizados por Beneficios notificando al usuario y solicitando su aceptación. Usted podrá revisar la versión más reciente de los TERMINOS Y CONDICIONES DE USO en todo momento. Además, cuando se encuentre utilizando servicios particulares de Beneficios u operados por Beneficios, Ud. y Beneficios estarán sujetos a guías de uso o reglas correspondientes a dichos servicios, que puedan ser publicadas periódicamente. Todas estas guías de uso o reglas se encuentran incorporadas a estos TERMINOS Y CONDICIONES DE USO.

1.	Descripción del servicio

Beneficios provee a los usuarios el acceso a una amplia colección de promociones y recursos incluyendo variadas herramientas de comunicación, servicios de compra, contenido personalizado y programación de terceros, por medio de su red de propiedades, a la que se puede acceder a través de diversos medios o dispositivos conocidos o a ser desarrollados en el futuro (el "Servicio").
Ud. comprende y acepta que el Servicio puede incluir publicidad y que la misma es necesaria para que Beneficios pueda prestar el Servicio.
Ud. también comprende y acepta que el Servicio puede incluir ciertas comunicaciones de Beneficios, como anuncios de servicios, mensajes administrativos y el . Newsletter, y que estas comunicaciones se consideran parte de la membresía de Beneficios y que Ud. NO podrá optar por no recibirlas. A menos que se indique expresamente lo contrario, cualquier nueva funcionalidad que aumente o mejore el Servicio actual, incluyendo el lanzamiento de nuevas propiedades de Beneficios, estará sujeta a estos TERMINOS Y CONDICIONES DE USO. Ud. comprende y acepta que el Servicio se provee "TAL CUAL ES" y que Beneficios no asume responsabilidades por el retraso, borrado, entrega equivocada o falla al guardar cualquier comunicación del usuario, o sus criterios de personalización Ud. es responsable de obtener el acceso al Servicio, el cual podrá incluir cargos de terceros (tales como cargos del proveedor de acceso a Internet o de comunicaciones). Ud. será responsable de tales cargos, incluyendo aquellos cargos asociados con la exhibición o envío de publicidad. Además, deberá contar con todo el equipo necesario para acceder al Servicio y será responsable del mismo

1.	Sus obligaciones de registro


Como una condición esencial para usar el Servicio, Ud. que posee capacidad legal para contratar y que no posee ningún impedimento para recibir servicios bajo las leyes del Estado Plurinacional de Bolivia y otras jurisdicciones aplicables. Asimismo, Ud. se obliga a:
(a) proveer información verdadera, correcta, actual y completa acerca de su persona del modo requerido en el formulario de registro del Servicio (información denominada en adelante "Datos de Registro"), y
(b) mantener y actualizar en todo momento los Datos de Registro a fin de conservarlos veraces, correctos, actuales y completos. Si suministra información que es falsa, inexacta, desactualizada o incompleta, o si Beneficios tiene bases razonables para sospechar que dicha información es falsa, inexacta, desactualizada o incompleta, Beneficios tendrá el derecho de suspender o cerrar su cuenta y negarle el uso presente o futuro del Servicio (o cualquier parte del mismo).

1.	Cuenta de usuario, contraseña y seguridad

Luego de completar el proceso de inscripción al Servicio, Ud. recibirá una contraseña y una designación de cuenta. Ud. será responsable de mantener la confidencialidad de la contraseña y de la cuenta, siendo también único y absoluto responsable por todas las actividades que ocurran bajo su contraseña o cuenta. Ud. se compromete a:
(a) notificar inmediatamente a Beneficios de cualquier uso no autorizado de su contraseña o cuenta o de cualquier otra violación de seguridad, y
(b) asegurarse de que su cuenta sea cerrada al final de cada sesión. Beneficios no será responsable por ninguna pérdida o daño que resulte como consecuencia de su incumplimiento a las disposiciones de este artículo
</string>
    <string name="default_notification_channel_id">locationtest_channel</string>
    <string name="geofence_transition_invalid_type">Geofence Transition Invalid Type</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_btn">REGISTRARSE</string>
    <string name="save_cahnges">Guardar cambios</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="login_usr">Usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_btn">Iniciar Sesión</string>
    <string name="login_recover_pass">Recuperar mi contraseña</string>
    <string name="document_and_terms">Debe ingresar su número de cédula y acepte los términos y condiciones</string>
    <string name="usuario_su">Correo</string>
    <string name="apellido_su">Apellidos</string>
    <string name="telefono_su">Teléfono</string>
    <string name="fechaNac_su">Fecha de Nacimiento</string>
    <string name="hint_su">dd/mm/aaaa</string>
    <string name="hinttel_su">xxxx-xxxx</string>
    <string name="genero_su">Género</string>
    <string name="estado_su">Estado Civil</string>
    <string name="email_su">Correo Electrónico</string>
    <string name="pass_su">Contraseña</string>
    <string name="conPass_su">Confirmar Contraseña</string>
    <string name="depto_su">Departamento</string>
    <string name="prov_su">Provincia</string>
    <string name="codigo_su">+591</string>
    <string name="incomplete_form">Completa el formulario de registro con los datos requeridos.</string>
    <string name="incomplete_form_title">UPS, FALTA INFORMACIÓN</string>
    <string name="no_tienes_una_cuenta_registrate_main">¿No tienes una cuenta? Registrate!</string>
    <string name="debil_su">Débil</string>
    <string name="date_format">dd/mm/aaaa</string>
    <string name="recover_text">Podemos ayudarte a recuperar tu contraseña, te enviaremos una nueva contraseña a tu correo electrónico para que accedas a tu cuenta.</string>
    <string name="recover_email">Correo Electrónico</string>
    <string name="recover_btn">Recuperar</string>
    <string name="recover_correo">Correo Electrónico</string>
    <string name="recover_atras">Atras</string>
    <string name="hint_exp">Busca en Explorar</string>
    <string name="buscar_exp">BUSCAR</string>
    <string name="cerca_exp">Cerca de ti</string>
    <string name="aprovecha_exp">Aprovecha ya</string>
    <string name="nuevo_exp">Lo nuevo</string>
    <string name="descuentos_exp">Mejores descuentos</string>
    <string name="personalizar_exp">Personalizar</string>
    <string name="accesos_exp">Mis Preferencias</string>
    <string name="no_hay_fav">No hay favoritos</string>
    <string name="no_hay_cat">No hay Categorias Activas</string>
    <string name="no_hay_be">No hay Beneficios</string>
    <string name="no_hay_cu">No hay Campañas</string>
    <string name="title_activity_detalle_cupon">DetalleCuponActivity</string>
    <string name="desc_de">Descripción</string>
    <string name="cond_de">Terminos y Condiciones</string>
    <string name="tiem_de">Tiempo Restante</string>
    <string name="efectuar_de">Pasos para efectuar el canje</string>
    <string name="cant_de">Disponibles</string>
    <string name="noCanjes_de">Cupones Agotados!</string>
    <string name="pasos">1. Generar Codigo QR al momento de hacer el canje en uno de los establecimientos designados.\n2. Presentarlo en la caja del comercio para que sea escaneado o digitado.\n3. ¡Listo! Disfruta tu beneficio, promoción o descuento.</string>
    <string name="ahorroA_p">Ahorro Acumulado</string>
    <string name="perdida_p">Perdida</string>
    <string name="ahorro_p">Ahorro</string>
    <string name="pendiente_c">Pendiente de Canje</string>
    <string name="other_p">Otros</string>
    <string name="explorar_menu">Explorar</string>
    <string name="cupones_menu">Cupones</string>
    <string name="beneficios_menu">Beneficios</string>
    <string name="favoritos_menu">Favoritos</string>
    <string name="canje_menu">Canjes</string>
    <string name="enviar_coment">ENVIAR</string>
    <string name="mensaje_coment">Mensaje:</string>
    <string name="comentarios_coment">Comentarios</string>
    <string name="adv_qr">** Al generar este código, NO RESERVA la promoción. Debe realizar el canje en el establecimiento para hacer valida la promoción.</string>
    <string name="title_activity_maps">Map</string>
    <string name="perfil_menu">Mi cuenta</string>
    <string name="terminos_y_condiciones_menu">Términos y Condiciones</string>
    <string name="comentarios_menu">Comentarios y Reportes</string>
    <string name="configuracion_menu">Configuración</string>
    <string name="ayuda_menu">Ayuda</string>
    <string name="cerrar_sesi_n_menu">Cerrar Sesión</string>
    <string name="nombre_su">Nombres</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="acerca_de">Acerca de</string>
    <string name="direcci_n">Dirección</string>
    <string name="view_inmap_label">Ver en el Mapa</string>
    <string name="open_waze_label">Abrir en Waze</string>
    <string name="share_label">Compartir</string>
    <string name="canje_nav">Canje</string>
    <string name="acumulaci_n_de_millas_nav">Acumulación de Millas</string>
    <string name="acumulaci_n_de_sellos_de_lealtad_nav">Acumulación de Sellos de Lealtad</string>
    <string name="canjes_de_millas_nav">Canjes de Millas</string>
    <string name="canjes_de_tarjetas_de_lealtad_nav">Canjes de Tarjetas de Lealtad</string>
    <string name="vinculaci_n_a_plan_de_lealtad_nav">Vinculación a Plan de Lealtad</string>
    <string name="desvinculaci_n_de_plan_de_lealtad_nav">Desvinculación de Plan de Lealtad</string>
    <string name="bloqueo_de_plan_de_lealtad_nav">Bloqueo de Plan de Lealtad</string>
    <string name="ver_todas_las_transacciones">Ver Todas las Transacciones</string>
    <string name="accept">Aceptar</string>
    <string name="next">Siguiente</string>
    <string name="question_5">Pregunta 5 de 6</string>
    <string name="question5_selected">¿Se encuentra Ud. actualmente en perfecto estado de salud y sin ningún sintoma de enfermedad?</string>
    <string name="question5_description">En caso de contestación negativa, proporcione detalles: (sintomas, desde cuando y, médico tratante):</string>
    <string name="question_6">Pregunta 6 de 6*</string>
    <string name="question6_description">(*Opcional) Nombre y dirección del médico de cabecera o del último médico que le ha asistido.</string>
    <string name="finish">Finalizar</string>
    <string name="success_purchase">COMPRA EXITOSA</string>
    <string name="how_works">¿CÓMO FUNCIONA?</string>
    <string name="check_mail_invoice">Revisa tu mail para vel el recibo</string>
    <string name="success_gift_shop">¡COMPRA EXITOSA!</string>
    <string name="view_gift">Ver regalo</string>
    <string name="gift_items">Artículos que he regalado</string>
    <string name="my_gift_items">Articulos que me han regalado</string>
    <string name="delivery_1">1. Selecciona Programar entrega a domicilio.</string>
    <string name="delivery_2">2. Agrega tu dirección y datos de entrega, incluyendo el día y la hora en la que puedes recibirlo.</string>
    <string name="delivery_3">3. Realiza el pago de tu artículo.</string>
    <string name="delivery_4">4. Recibiras un correo con la información de tu compra y los datos ingresados por la entrega.</string>
    <string name="delivery_5">5. Recibe tu pedido el día y la hora programada.</string>
</resources>