<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/all_nav"
        app:showAsAction="never"
        android:title="@string/ver_todas_las_transacciones">
    </item>
    <item
        android:id="@+id/exchange_nav"
        app:showAsAction="never"
        android:title="@string/canje_nav">
    </item>
    <item
        android:id="@+id/plusMiles_nav"
        app:showAsAction="never"
        android:title="@string/acumulaci_n_de_millas_nav">
    </item>
    <item
        android:id="@+id/plusLoyalty_nav"
        app:showAsAction="never"
        android:title="@string/acumulaci_n_de_sellos_de_lealtad_nav">
    </item>
    <item
        android:id="@+id/miles_nav"
        app:showAsAction="never"
        android:title="@string/canjes_de_millas_nav">
    </item>
    <item
        android:id="@+id/loyaltyCards_nav"
        app:showAsAction="never"
        android:title="@string/canjes_de_tarjetas_de_lealtad_nav">
    </item>
    <item
        android:id="@+id/addLoyalty_nav"
        app:showAsAction="never"
        android:title="@string/vinculaci_n_a_plan_de_lealtad_nav">
    </item>
    <item
        android:id="@+id/deleteLoyalty_nav"
        app:showAsAction="never"
        android:title="@string/desvinculaci_n_de_plan_de_lealtad_nav">
    </item>
    <item
        android:id="@+id/blockingLoyalty_nav"
        app:showAsAction="never"
        android:title="@string/bloqueo_de_plan_de_lealtad_nav">
    </item>
    <item
        android:id="@+id/giftedArticle_nav"
        app:showAsAction="never"
        android:title="@string/gift_items">
    </item>
    <item
        android:id="@+id/myArticleGift_nav"
        app:showAsAction="never"
        android:title="@string/my_gift_items">
    </item>
</menu>