<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_5"
            android:textSize="16sp"
            android:fontFamily="@font/circular_book"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            style="@style/TextAppearance.AppCompat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5_selected"
            android:fontFamily="@font/myriad_pro_regular"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="@style/TextAppearance.AppCompat"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/yesRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:checked="true"
                    android:layout_marginEnd="16dp"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/noRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:layout_marginStart="16dp"/>

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5_description"
            android:fontFamily="@font/myriad_pro_regular"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="@style/TextAppearance.AppCompat"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionId"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:boxStrokeColor ="@android:color/holo_purple" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/circular_book"
            android:text="@string/next"
            android:textSize="17sp"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorPrimaryDark"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

</ScrollView>