<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/viewGift">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_compra_exitosa"
            android:contentDescription="@string/success_purchase" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/success_gift_shop"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:fontFamily="@font/myriad_pro_bold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/check_mail_invoice"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/circular_book"/>

        <TextView
            android:id="@+id/giftDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/circular_book"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewGift"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/circular_book"
        android:text="@string/view_gift"
        android:textColor="@color/colorPrimaryLigth"
        android:textSize="19sp"
        android:gravity="center"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.AppCompat.Button.Colored"/>

</androidx.constraintlayout.widget.ConstraintLayout>