<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:cardCornerRadius="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="¡Ahora llegamos hasta tu puerta!"
                        android:fontFamily="@font/circular_bold"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_delivery"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/closeId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_close"
                    tools:ignore="ContentDescription"
                    android:visibility="gone"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/base_margin"
                android:layout_marginEnd="@dimen/base_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/infoId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:text="@string/how_works"
                    android:textSize="16sp"
                    android:fontFamily="@font/circular_bold"
                    android:gravity="center_vertical"
                    style="@style/TextAppearance.AppCompat"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:text="@string/delivery_1"
                    android:fontFamily="@font/myriad_pro_regular" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:text="@string/delivery_2"
                    android:fontFamily="@font/myriad_pro_regular" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:text="@string/delivery_3"
                    android:fontFamily="@font/myriad_pro_regular" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:text="@string/delivery_4"
                    android:fontFamily="@font/myriad_pro_regular" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:text="@string/delivery_5"
                    android:fontFamily="@font/myriad_pro_regular" />

                <Button
                    android:id="@+id/accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/button_shape"
                    android:textColor="@color/white"
                    android:fontFamily="@font/circular_bold"
                    android:text="@string/accept"
                    app:backgroundTint="@color/colorPrimaryDark"
                    style="@style/Widget.AppCompat.Button.Colored"/>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

        </LinearLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>