<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_6"
            android:textSize="16sp"
            android:fontFamily="@font/circular_book"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            style="@style/TextAppearance.AppCompat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question6_description"
            android:fontFamily="@font/myriad_pro_regular"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="@style/TextAppearance.AppCompat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_su"
            android:fontFamily="@font/myriad_pro_regular"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="@style/TextAppearance.AppCompat"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/doctorNameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:boxStrokeColor ="@android:color/holo_purple" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direcci_n"
            android:fontFamily="@font/myriad_pro_regular"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="@style/TextAppearance.AppCompat"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/doctorAddressId"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:boxStrokeColor ="@android:color/holo_purple" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/endQuestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:fontFamily="@font/circular_book"
                android:text="@string/finish"
                android:textSize="17sp"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimaryDark"
                style="@style/Widget.AppCompat.Button.Colored"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ProgressBar
                android:id="@+id/progress_bar_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:indeterminateTintMode="src_in"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/endQuestions"
                app:layout_constraintBottom_toBottomOf="@id/endQuestions"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>

</ScrollView>